# coremark-pro

./: CMakeLists.txt  README.md  main-args.c  prj.conf  run.sh
cjpeg-rose7-preset/: CMakeLists.txt  prj.conf
cjpeg-rose7-preset/src/: cjpeg-rose7-preset.c
core/: CMakeLists.txt  prj.conf
core/src/: core.c  core_list_join.c  core_matrix.c  core_mith.c  core_util.c  coremark.h
linear_alg-mid-100x100-sp/: CMakeLists.txt
linear_alg-mid-100x100-sp/src/: inputs_f32.c  linear_alg-mid-100x100-sp.c
loops-all-mid-10k-sp/: CMakeLists.txt
loops-all-mid-10k-sp/src/: 100.c  100k.c  100kdot.c  10k.c  10kdot.c  1k.c  1kdot.c  32.c  loops-all-mid-10k-sp.c  loops.c
mith/al/include/: al_smp.h  th_cfg.h
mith/al/src/: th_al.c
mith/include/: th_file.h
mith/src/: mith_lib.c
nnet_test/: CMakeLists.txt
nnet_test/src/: nnet.c  nnet_test.c
parser-125k/: CMakeLists.txt
parser-125k/src/: ezxml.c  parser-125k.c
radix2-big-64k/: CMakeLists.txt
radix2-big-64k/src/: 2K.c  32K.c  4K.c  data3_big.c  data4_mid.c  data5_small.c  fft_radix2.c  radix2-big-64k.c
sha-test/: CMakeLists.txt
sha-test/src/: sha-test.c
workloads/cjpeg-rose7-preset/: CMakeLists.txt  cjpeg-rose7-preset.c  prj.conf
workloads/core/: CMakeLists.txt  core.c  prj.conf
workloads/linear_alg-mid-100x100-sp/: CMakeLists.txt  linear_alg-mid-100x100-sp.c
workloads/loops-all-mid-10k-sp/: CMakeLists.txt  loops-all-mid-10k-sp.c  prj.conf
workloads/nnet_test/: CMakeLists.txt  nnet_test.c  prj.conf
workloads/parser-125k/: CMakeLists.txt  parser-125k.c
workloads/radix2-big-64k/: CMakeLists.txt  radix2-big-64k.c
workloads/sha-test/: CMakeLists.txt  sha-test.c
workloads/zip-test/: CMakeLists.txt  prj.conf  zip-test.c
zip-test/: CMakeLists.txt  prj.conf
zip-test/src/: zip-test.c
